# fastapi-boilerplate

./: CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  run.py  settings.conf
src/: api.py
tests/it/: test_api.py
tests/unit/config/: test_settings.py
